--- a/.env
+++ b/.env
@@ -4,6 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:Vikas2003!@localhost:3306/poll-booth?schema=public"
+DATABASE_URL="mysql://<username>:<passwd>@<hostname>:3306/poll-booth?schema=public"
 JWT_SECRET="#%&*)~?/!789bnm"
-PORT=3000
